# GopStake

./: LICENSE  README.md
contracts/: .gitignore  Cargo.toml  README.md
contracts-inj/: Cargo.toml
contracts-inj/contracts/minter-inj/: Cargo.toml  build.sh
contracts-inj/contracts/minter-inj/src/: assets.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs  utils.rs
contracts-inj/contracts/minter-inj/src/actions/: execute.rs  instantiate.rs  other.rs  query.rs
contracts/artifacts/: checksums.txt  minter.wasm  minter_inj.wasm  staking_platform.wasm
contracts/artifacts-optimizoor/: checksums.txt  checksums_intermediate.txt  minter.wasm  staking_platform.wasm
contracts/contracts/minter/: Cargo.toml  build.sh
contracts/contracts/minter/examples/: schema.rs
contracts/contracts/minter/schema/: minter.json
contracts/contracts/minter/src/: contract.rs
contracts/contracts/minter/src/actions/: execute.rs  instantiate.rs
contracts/contracts/staking-platform/: Cargo.toml
contracts/contracts/staking-platform/examples/: schema.rs
contracts/contracts/staking-platform/schema/: staking-platform.json
contracts/contracts/staking-platform/src/: contract.rs  lib.rs
contracts/contracts/staking-platform/src/actions/: execute.rs  instantiate.rs  other.rs  query.rs
contracts/scripts/: .babelrc  .gitignore  package-lock.json  package.json
contracts/scripts/gov/: config.sh  desc-inj-minter.md  desc-inj-platform.md  desc-sg-minter.md  desc-sg-platform.md  description.md  gov-stargaze.sh  meta.json  prop.json  store-inj-minter.sh  store-inj-platform.sh  store-sg-minter.sh  store-sg-platform.sh
contracts/scripts/src/backend/: envs.ts  tsconfig.json  utils.ts
contracts/scripts/src/backend/account/: signer-inj.ts  signer.ts  workers.ts
contracts/scripts/src/backend/services/: call-contract-inj.ts  call-contract.ts  get-seed.ts  init-contract-inj.ts  init-contract.ts  migrate-contract-inj.ts  migrate-contract.ts  store-contract-inj.ts  store-contract.ts  update-config-inj.ts  update-config.ts
contracts/scripts/src/common/account/: clients.ts  cw-helpers-inj.ts  cw-helpers.ts  sg-helpers-inj.ts  sg-helpers.ts
contracts/scripts/src/common/codegen/: Minter.client.ts  Minter.message-composer.ts  Minter.types.ts  StakingPlatform.client.ts  StakingPlatform.message-composer.ts  StakingPlatform.types.ts
contracts/scripts/src/common/config/: index.ts  injective-minter.json  injective-staking_platform.json  stargaze-minter.json  stargaze-staking_platform.json
contracts/scripts/src/common/interfaces/: index.ts
contracts/scripts/src/common/utils/: index.ts
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs  staking_platform.rs
contracts/tests/src/helpers/: minter.rs  staking_platform.rs
contracts/tests/src/helpers/suite/: codes.rs  core.rs  types.rs
frontend-demo/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js  wallet.js
frontend-demo/common/account/: clients.d.ts  clients.js  cw-helpers-inj.js  cw-helpers.d.ts  cw-helpers.js  sg-helpers-inj.d.ts  sg-helpers-inj.js  sg-helpers.d.ts  sg-helpers.js
frontend-demo/common/codegen/: Minter.client.d.ts  Minter.client.js  Minter.message-composer.d.ts  Minter.message-composer.js  StakingPlatform.client.js  StakingPlatform.message-composer.d.ts  StakingPlatform.types.d.ts
frontend-demo/common/config/: index.js  injective-minter.json
frontend-demo/common/utils/: index.d.ts  index.js
