[package]
name = "tests"
version = "1.0.0"
authors = ["M. Daeva <embedmad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
speculoos = { workspace = true }

gopstake-base = { workspace = true }
minter-mocks = { workspace = true }

staking-platform = { workspace = true }
