[package]
name = "minter-inj"
version = "1.0.0"
authors = ["M. Daeva <embedmad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.2.7", features = [ "abort", "iterator", "stargate" ] }
schemars = "0.8.8"
# injective-std = "0.1.4"
injective-cosmwasm = "0.2.17"
cosmwasm-schema = "1.2.7"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
serde = "1.0.163"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
anyhow = "1.0.71"
getrandom = { version = "0.2.9", features = ["js"] }
